# novel-agent

./: .gitignore  novelagent.yaml  pyproject.toml
src/novelagent/: api.py  cli.py  config.py  paths.py
src/novelagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/novelagent/delivery/: __init__.py  packager.py
src/novelagent/editors/: __init__.py  orchestrator.py  roles.py
src/novelagent/llm/: __init__.py  client.py
src/novelagent/projects/: __init__.py  models.py  project_flow.py
src/novelagent/writing/: __init__.py  reviewer.py  writer.py
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  index.css
web/src/api/: client.ts
web/src/layout/: DashboardLayout.tsx  dashboard.css
web/src/pages/: ProjectModulesPage.tsx  ProjectSettingsPage.tsx  ProjectWorkflowPage.tsx  ProjectsPage.tsx  RolesPage.tsx  StudioPage.tsx  pages.css
workspace/projects/测试项目-de89451d/: brief.json  feedback.txt
workspace/projects/测试项目-de89451d/artifacts/editorial_board/chapter_002/: memos.json  memos.md
workspace/projects/测试项目-de89451d/chapter_outlines/: chapter_001.md  chapter_002.md  index.json
workspace/projects/测试项目-de89451d/delivery/package_20260311_023743/: manifest.json
workspace/projects/测试项目-de89451d/delivery/package_20260311_023743/outlines/: outline_v1.json  (+1 more)
workspace/projects/测试项目-de89451d/drafts/: chapter_001_eafc6f64b3.md  chapter_002_05f7991b9c.md
workspace/projects/测试项目-de89451d/outlines/: outline_v2.json  outline_v2.md  outline_v3.json  outline_v3.md
workspace/projects/测试项目a-b71899b9/: brief.json
(+3 files in other folders)
